# mcppetcareonly

./: README.md
mcp-server/: Dockerfile  Makefile  demo_orange.html  pyproject.toml  pytest.ini  requirements.txt
mcp-server/app/: main.py
mcp-server/app/api/: middleware.py  routes.py
mcp-server/app/common/: auth.py
mcp-server/app/core/: config.py  exceptions.py  security.py
mcp-server/app/infrastructure/db/: session.py
mcp-server/app/infrastructure/storage/: s3_client.py
mcp-server/app/llm/: base.py  gemma_adapter.py  selector.py
mcp-server/app/mcp/: fastmcp_server.py  integration.py  registry.py  router.py
mcp-server/app/repository/: clinics_repo.py  documents_repo.py  pets_repo.py
mcp-server/app/services/: assistant_service.py  clinics_service.py  documents_service.py  pets_service.py
mcp-server/app/tools/: __init__.py
mcp-server/app/tools/assistant/: tool.py
mcp-server/app/tools/clinics/: tool.py
mcp-server/app/tools/documents/: tool.py
mcp-server/app/tools/pets/: tool.py
mcp-server/docker/: docker-compose.yml  init.sql
mcp-server/tests/: test_smoke.py
mcp-server/tests/integration/: availability.py  clinics-tool.py  confest.py  docs-tool.py  petstool.py
mcp-server/tests/unit/: conftest.py  test_clinics_service.py  test_documents_service.py  test_mcp_router.py  test_pets_service.py
