[project]
name = "petcare-mcp-server"
version = "0.1.0"
description = "Starter MCP server for Petcare with DB, S3, and external service tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "httpx>=0.27.0",
  "mcp[cli]>=1.17.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
]

[project.scripts]
petcare-mcp = "petcare_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["petcare_mcp*"]
